--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-native-community/viewpager": "^5.0.11",
     "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/material-top-tabs": "^6.6.10",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@reduxjs/toolkit": "^2.1.0",
-    "expo": "~50.0.8",
+    "expo": "~50.0.11",
     "expo-image-picker": "~14.7.1",
     "expo-status-bar": "~1.11.1",
     "firebase": "^10.8.0",
@@ -33,6 +34,7 @@
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-tab-view": "^3.5.2",
     "react-native-uuid-generator": "^6.1.1",
     "react-native-vector-icons": "^10.0.3",
     "react-redux": "^9.1.0",
